<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>psd_vehicle_hardware_interfaces</name>
  <version>1.0.0</version>
  <description>Hardware controller for psd_vehicle</description>
  <license>Apache License 2.0</license>

  <maintainer email="edo.ca1999@gmail.com">Edoardo Caciorgna</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>diff_drive_controller</depend>
  <depend>imu_sensor_broadcaster</depend>

  <build_depend>pluginlib</build_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
